syntax = "proto3";

package net.praqma.tracey.protocol.eiffel.events;

import "models.proto";

message EiffelCompositionDefinedEvent {
    models.Meta meta = 1;
    repeated models.Link links = 2;
    EiffelCompositionDefinedEventData data = 3;

    message EiffelCompositionDefinedEventData {
        string name = 1;
    }
}